--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pyp",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Pick first occurrence of element based on condition.",
   "main": "pyp.js",
   "support": "pyp.support.js",
@@ -24,7 +24,8 @@
   ],
   "author": "Richeve S. Bebedor",
   "contributors": [
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+    "Vinse Vinalon <vinsevinalon@gmail.com>"
   ],
   "license": "MIT",
   "bugs": {
@@ -34,7 +35,7 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "doubt": "^0.27.0",
-    "pyck": "^0.34.0",
+    "pyck": "^0.35.0",
     "zelf": "^0.12.0"
   },
   "devDependencies": {
