--- a/package.json
+++ b/package.json
@@ -51,5 +51,29 @@
 		"babel-runtime": "^6.26.0",
 		"pyck": "^0.38.0",
 		"zelf": "^0.14.0"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.26.0",
+		"babel-core": "^6.26.0",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-preset-latest": "^6.24.1",
+		"electron": "^1.7.6",
+		"gulp": "^3.9.1",
+		"gulp-babel": "^7.0.0",
+		"gulp-changed": "^3.1.0",
+		"gulp-debug": "^3.1.0",
+		"gulp-plumber": "^1.1.0",
+		"gulp-rename": "^1.2.2",
+		"gulp-replace": "^0.6.1",
+		"gulp-sourcemaps": "^2.6.1",
+		"mocha": "^3.5.3",
+		"should": "^13.0.1",
+		"source-map-loader": "^0.2.1",
+		"wdio-json-reporter": "^0.2.1",
+		"wdio-mocha-framework": "^0.5.11",
+		"wdio-selenium-standalone-service": "^0.0.9",
+		"webdriverio": "^4.8.0",
+		"webpack": "^3.5.6",
+		"yargs": "^8.0.2"
 	}
 }
